[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rs2"
version = "0.0.1"
authors = [
  { name="Rocscience"},
]
description = "Client library for interacting with RS2 through python"
readme = "README.md"
requires-python = ">=3.6, <=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]