[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RS2Scripting"
version = "11.26.0"
dependencies = [
  "rsmessages == 0.0.2"
]
authors = [
  { name="Rocscience"},
]
description = "Client library for interacting with RS2 through python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]
license = {text = "MIT License"}
keywords = ["Rocscience", "RS2", "Scripting", "RocScript", "Geotechnical", "Finite Element Analysis", "FEM", "2D"]

[project.urls]
Homepage = "https://www.rocscience.com/software/rs2"
Documentation = "https://www.rocscience.com/help/rs2/overview"
